@@ -8,6 +8,7 @@ import com.bookmakerApp.model.football.FootballMatchModel;
 import com.bookmakerApp.service.impl.DefaultEventServiceImpl;
 import lombok.RequiredArgsConstructor;
 import org.springframework.beans.factory.annotation.Qualifier;
+import org.springframework.data.domain.Page;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
@@ -22,21 +23,21 @@ public class FootballEventFacadeImpl implements EventFacade {
     private final DefaultEventServiceImpl defaultEventService;
 
     @Override
-    public List<FootballEventModelDto> getUnfinishedFootballEvents() {
-        List<EventModel> events = defaultEventService.getUnfinishedEvents();
-        events = events.stream()
+    public List<FootballEventModelDto> getUnfinishedFootballEvents(int pageNumber) {
+        Page<EventModel> events = defaultEventService.getUnfinishedEvents(pageNumber);
+        List<EventModel> footballEvents = events.stream()
                 .filter(event -> event.getSport() instanceof FootballMatchModel)
-                .collect(Collectors.toList());
-        return FootballEventModelDtoMapper.mapToFootballEventModelDtos(events);
+                .toList();
+        return FootballEventModelDtoMapper.mapToFootballEventModelDtos(footballEvents, events.getTotalPages());
     }
 
     @Override
-    public List<FootballEventModelDto> getFinishedFootballEvents() {
-        List<EventModel> events = defaultEventService.getFinishedEvents();
-        events = events.stream()
+    public List<FootballEventModelDto> getFinishedFootballEvents(int pageNumber) {
+        Page<EventModel> events = defaultEventService.getFinishedEvents(pageNumber);
+        List<EventModel> footballEvents = events.stream()
                 .filter(event -> event.getSport() instanceof FootballMatchModel)
-                .collect(Collectors.toList());
-        return FootballEventModelDtoMapper.mapToFootballEventModelDtos(events);
+                .toList();
+        return FootballEventModelDtoMapper.mapToFootballEventModelDtos(footballEvents, events.getTotalPages());
     }
 
     @Override
@@ -45,7 +46,7 @@ public class FootballEventFacadeImpl implements EventFacade {
         events = events.stream()
                 .filter(event -> event.getSport() instanceof FootballMatchModel)
                 .collect(Collectors.toList());
-        return FootballEventModelDtoMapper.mapToFootballEventModelDtos(events);
+        return FootballEventModelDtoMapper.mapToFootballEventModelDtos(events, 0);
     }
 
     public EventModel addEvent(EventModel event) {
